tests/fail_write_alias.rte
var x = new 42;
var y = x;
x := 0; // error: pointer does not have write privilege
return *y;